--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "angularfire2": "^5.0.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "rxjs": "~6.2.0",
+    "firebase": "^5.5.3",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -43,6 +50,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "^2.9.2"
   }
 }
